# Fable.Sedlex

./: .gitignore  Bug.fs  CodeGen.Julia.fs  CodeGen.Python.fs  CodeGen.fs  Fable.Sedlex.fsproj  Fable.Sedlex.sln  Program.fs  README.md  Sedlex.fs  build.ps1  build.sh  fable-pykg.comf  generated.jl  generated.py  package-lock.json  project.comf  pyproject.toml  runtest.ps1  setup.py  test-julia.sh  test.py  test_codegen_py.py  test_compile_regex.py  test_interpreter.py  test_julia.js  test_julia.py  test_run_generated.py
fable_sedlex/: CodeGen.Julia.js  CodeGen.Python.js  PrettyDoc.js  Sedlex.js  bug.py  code_gen.py  code_gen_julia.py  code_gen_python.py  pretty_doc.py  program.py  sedlex.py
fable_sedlex/fable_modules/: cache_info.json  project_cracked.json
fable_sedlex/fable_modules/fable-library.3.7.6/: Array.js
fable_sedlex/fable_modules/fable-library.3.7.6/fable_modules/: project_cracked.json
fable_sedlex/fable_modules/fable_library/: array.py  choice.py  fsharp_collections.py  fsharp_core.py  global_.py  list.py  map.py  mutable_map.py  mutable_set.py  native.py  range.py  seq.py  seq2.py  set.py  system_collections_generic.py  system_text.py  timer.py
fable_sedlex/fable_modules/fable_library/fable_modules/: project_cracked.json
